<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.0.19">
  <DUT Name="ST_BinaryHeader" Id="{7c2e64e8-e53f-45a0-a13e-1391aaf50850}">
    <Declaration><![CDATA[TYPE ST_BinaryHeader :(* Simple frame header (4 byte aligned) *)
STRUCT
	dwHead		: DWORD	:= 16#BECF1234;	(* start bytes *)
	cbLength		: UDINT(0..PLCPRJ_BUFFER_SIZE) := 0;(* Max. length of attached binary data *)
	nS			: UDINT 		:= 0;		(* send counter *)
	nR			: UDINT		:= 0;		(* receive counter *)
END_STRUCT
END_TYPE]]></Declaration>
    <ObjectProperties />
  </DUT>
</TcPlcObject>